[package]
name = "extent-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0"}
xattr = {version = "0.2.3"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.2"
crc32fast = "1.3.2"
thiserror = "1.0"
rand = "0.6.5"


