[package]
name = "rust-autumn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client="0.7"
tokio = {version = "1.0", features = ["full"]}
prost = {version = "0.9.0"}
tonic = "0.6.1"
[build-dependencies]
tonic-build = {version = "0.6.0", default-features = true, features = ["prost"]}